--- a/src/component/homePage/homepage.css
+++ b/src/component/homePage/homepage.css
@@ -1,5 +1,6 @@
 .container {
    padding: 40px 50px;
+   /* border: 1px solid red; */
 }
 
 .container .header h1,p {
@@ -8,7 +9,7 @@
 
 .container .header h1{
    margin-bottom: 0;
-   font-size: 40px;
+   font-size: clamp(20px, 18vw, 2.8rem);
 }
 
 .container .header p{
@@ -134,6 +135,10 @@
   padding: 7px 28px;
 }
 
+.container .hero-container .resume-main ul li:nth-child(6) {
+ display: none;
+}
+
 .active{
    background-color: white;
    border-radius: 5px 5px 0 0;
@@ -182,5 +187,109 @@
 .footer-text{
    font-style: italic;
    font-size: 12px;
-  text-decoration: underline;
+   text-decoration: underline;
+   position: absolute;
+   bottom:  10px;
+}
+
+/* .side-bar{
+   display: none;
+} */
+
+
+.container .hero-container .side-bar ul {
+  list-style-type: none;
+  display: none;
+  flex-wrap: wrap;
+}
+.container .hero-container .side-bar ul li {
+ cursor: pointer;
+ padding: 7px 28px;
+}
+
+.container .hero-container .side-bar ul li:nth-child(6) {
+display: none;
+}
+
+.side-bar .hamburger-btn{
+  position: absolute;
+  top: 20px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  left: 15px;
+  display: none;
+}
+
+.side-bar .hamburger-btn img{
+  width: 40px;
+  height: auto;
+}
+
+/* Media Queries Mobile */
+@media only  screen and (max-width: 600px) {
+
+  .container { 
+    padding-left: 10px;
+    padding-right: 0;
+  }
+  
+  .container .header h1{
+    text-align: center;
+ }
+  .container .hero-container .resume-output{
+    display: none;
+  }
+
+  .container .hero-container .resume-main{
+    flex: 1;
+    min-width: 80vw;
+  }
+
+  .container .hero-container .resume-main ul {
+    display: none;
+ }
+
+ .container .hero-container .side-bar ul{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: -1000px;
+    height: 100vh;
+    z-index: 3;
+    background-color: white;
+    gap: 15px;
+    width: 70vw;
+    transition: all ease-in-out 1.2s;
+    box-shadow: 0 0 6px 5px rgba(0, 0, 0, 0.256);
+    border-radius: 0 5px 5px 0;
+  }
+
+  .active{
+    background-color: #BFD0E0;
+  }
+
+ 
+
+  .side-bar .hamburger-btn{ 
+    display: block;
+  }
+
+ .show-output{
+    flex: 1;
+    background-color: white;
+    border-radius: 10px;
+    min-width: 80vw;
+    box-shadow: 14px 10px 0px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 14px 10px 0px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 14px 10px 0px 0px rgba(0,0,0,0.75);
+    position: relative;
+  }
+
+  .container .hero-container .resume-main ul li:nth-child(6) {
+    display: block;
+   }
+   
+
 }
